Fixing alignment in the footer section

--- a/ckanext/ngds/ngdsui/public/css/default.css
+++ b/ckanext/ngds/ngdsui/public/css/default.css
@@ -993,7 +993,6 @@ div.postface div.left {
 
 div.postface div.right {
 	position:relative;
-	margin-top:5px;
 	display:table;
 	float:right;
 	width:320px;
